# C-Plus-Plus-Ex3

./: Baron.hpp  C++EX3.drawio  CMakeLists.txt  Cpp Ex3 game logic.docx  Demo.cpp  Ex3_CPP_Game.sln  Game.cpp  Game.hpp  General.hpp  Governor.hpp  Judge.hpp  Merchant.hpp  Player.cpp  Player.hpp  README.MD  README.md  Spy.hpp  TODO.txt  Test.cpp  main.cpp  makefile
Ex3_CPP_Game/: App.cpp  App.h  Ex3_CPP_Game.sln  Ex3_CPP_Game.vcxproj  Ex3_CPP_Game.vcxproj.filters  GameFrame.cpp  GameFrame.h  GamePanel.cpp  GamePanel.h  MenuFrame.cpp  MenuFrame.h  MenuPanel.cpp  MenuPanel.h  RevealDialog.h  makefile
Ex3_CPP_Game/game/: Game.cpp  Game.hpp  GameExceptions.hpp
Ex3_CPP_Game/game/player/: Player.cpp  Player.hpp
Ex3_CPP_Game/game/player/roleHeader/: Baron.hpp  General.hpp  Governor.hpp  Judge.hpp  Merchant.hpp  Spy.hpp
Ex3_CPP_Game/game/player/roleSrc/: Baron.cpp  General.cpp  Governor.cpp  Judge.cpp  Merchant.cpp  Spy.cpp
game/: Game.cpp  Game.hpp  GameExceptions.hpp
game/player/: Player.cpp  Player.hpp
game/player/roleHeader/: Baron.hpp  General.hpp  Governor.hpp  Judge.hpp  Merchant.hpp  Spy.hpp  role.hpp
game/player/roleSrc/: Baron.cpp  General.cpp  Governor.cpp  Judge.cpp  Merchant.cpp  Spy.cpp
gui/: App.cpp  App.h  Ex3_CPP_Game.sln  Ex3_CPP_Game.vcxproj  Ex3_CPP_Game.vcxproj.filters  GameFrame.cpp  GameFrame.h  GamePanel.cpp  GamePanel.h  MenuFrame.cpp  MenuFrame.h  MenuPanel.cpp  MenuPanel.h  RevealDialog.cpp  RevealDialog.h
test/: TODO_Test_List  TestList.txt  test.cpp  testold.txt
tests/: Test.cpp  doctest.h
